--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
@@ -96,7 +96,7 @@
         var status = AuthorizationService.GetSubscriptionStatus(member, subscription, Model.MembershipSettings);
 
         <tr data-filter-name="@member.FullName" 
-            data-filter-type="@subscription?.Type"
+            data-filter-type="@(subscription?.Type ?? SubscriptionType.Full)"
             data-filter-status="@status">
             <td width="30px" class="px-0">
                 @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
@@ -111,7 +111,7 @@
                     @member.GetDisplayName(Model.Chapter.Id)
                 </a>
             </td>
-            <td>@subscription?.Type</td>
+            <td>@(subscription?.Type ?? SubscriptionType.Full)</td>
             <td>
                 <span class="d-none" data-sort-value="@(subscription?.ExpiresUtc?.ToString("yyyy-MM-dd") ?? "")"></span>
                 <span class="@(subscription?.ExpiresUtc < DateTime.Today ? "text-danger" : null)
