--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Members
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Razor.Models.Payments
 @model ODK.Web.Razor.Models.Admin.Members.SubscriptionFormViewModel
 @{
     var typeOptions = new[]
@@ -31,7 +32,19 @@
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Amount, new { @class = "form-label" })
-    @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", min = 0, step = 0.5 })
+    <div class="input-group">
+        <span class="input-group-text">
+            @Model.PaymentSettings.Currency.Symbol
+        </span>
+        @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", min = 0, step = 0.5 })        
+    </div>    
+    <div>
+        @await Html.PartialAsync("Payments/_PaymentCommissionText", new PaymentCommissionTextViewModel
+        {
+            ChapterPaymentSettings = Model.PaymentSettings,
+            OwnerSubscription = Model.OwnerSubscription
+        })
+    </div>
     @Html.ValidationMessageFor(x => x.Amount)
 </div>
 
