--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventInvitesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventInvitesContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Events
 @using ODK.Core.Extensions
+@using ODK.Core.Features
 @using ODK.Core.Utils
 @using ODK.Services
 @using ODK.Services.Events.ViewModels
@@ -23,37 +24,46 @@
     @await Html.PartialAsync("Admin/Events/_EventResponses")
     @await Html.PartialAsync("Admin/Events/_EventInviteeUpdate", new EventUpdateViewModel
     {
-        Chapter = Model.Chapter.Name,
+        Chapter = Model.Chapter,
         EventId = Model.Event.Id
     })
 
     return;
 }
 
-<form method="post" action="/@Model.Chapter.Name/Admin/Events/@Model.Event.Id/Invites/Send">
-    @Html.AntiForgeryToken()
-    <button type="submit" class="btn btn-success"
-            onclick="return confirm('Are you sure you want to send invite emails for this event?');">
-        Send invites
-    </button>
-</form>
-<p class="text-muted ms-1">
-    Emails are batched and sent to your admin email address with members included on BCC.
-    You will receive 1 email per batch as the admin recipient + your member invite.
-</p>
+<div class="d-flex flex-column gap-3">
+    <div>
+        <div class="d-flex gap-3">
+            <form method="post" action="/groups/@Model.Chapter.Id/events/@Model.Event.Id/invites/send">
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-success"
+                        onclick="return confirm('Are you sure you want to send invite emails for this event?');">
+                    Send invites
+                </button>
+            </form>
+            <form method="post" action="/groups/@Model.Chapter.Id/events/@Model.Event.Id/invites/send/test">
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-secondary">Send test</button>
+            </form>
+        </div>        
+        <p class="text-muted ms-1">
+            Emails are batched and sent to your admin email address with members included on BCC.
+            You will receive 1 email per batch as the admin recipient + your member invite.
+        </p>
+    </div>    
 
-<div class="mt-3">
-    <form method="post" action="/@Model.Chapter.Name/Admin/Events/@Model.Event.Id/Invites/SendTest">
-        @Html.AntiForgeryToken()
-        <button type="submit" class="btn btn-secondary">Send test</button>
-    </form>
-</div>
-
-<div class="mt-3">
-    @await Html.PartialAsync("Admin/Events/_ScheduledEmailForm", new EventScheduledEmailFormViewModel
-    {
-        Chapter = Model.Chapter,
-        EventId = Model.Event.Id,
-        ScheduledEmailDate = Model.Chapter.ToChapterTime(Model.Invites.ScheduledUtc)
-    })
+    <div>
+        <h4>Scheduled</h4>
+            
+        @await Html.PartialAsync("Components/_RestrictedFeature", new RestrictedFeatureViewModel(Model.OwnerSubscription)
+        {
+            Feature = SiteFeatureType.ScheduledEventEmails,
+            Content = await Html.PartialAsync("Admin/Events/_ScheduledEmailForm", new EventScheduledEmailFormViewModel
+            {
+                Chapter = Model.Chapter,
+                EventId = Model.Event.Id,
+                ScheduledEmailDate = Model.Chapter.ToChapterTime(Model.Invites.ScheduledUtc)
+            })
+        })
+    </div>   
 </div>
