--- a/ODK.Web.Razor/Pages/My/Groups/Events/Create.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Create.cshtml
@@ -5,8 +5,9 @@
 @{
     Layout = "_GroupAdminLayout";
     Model.Title = "Create event";
-    
+
     var viewModel = await EventAdminService.GetEventCreateViewModel(Model.AdminServiceRequest);
+    viewModel.VenueId = Model.VenueId;
 }
 
 @await Html.PartialAsync("Admin/Events/_EventCreateContent", viewModel)
