--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -46,6 +46,7 @@
         OwnerSubscription = Model.OwnerSubscription,
         PaymentSettings = Model.PaymentSettings,
         Platform = Model.Platform,
+        Venue = Model.VenueId ?? default,
         Venues = Model.Venues
     })
     
