--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
@@ -7,6 +7,8 @@
 @using ODK.Web.Razor.Models.Components
 @model VenueAdminPageViewModel
 
+<h2>@Model.Venue.Name</h2>
+
 @await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
 {
     Breadcrumbs = new[]
