--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueEventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueEventsContent.cshtml
@@ -3,12 +3,27 @@
 @using ODK.Services
 @using ODK.Services.Events
 @using ODK.Services.Venues.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin.Events
+@using ODK.Web.Razor.Models.Components
 @model VenueEventsAdminPageViewModel
 
 <h2>@Model.Venue.Name</h2>
+
+@await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
+{
+    Breadcrumbs = new[]
+    {
+        new MenuItem
+        {
+            Link = OdkRoutes2.MemberGroups.Venues(Model.Platform, Model.Chapter),
+            Text = "Venues"
+        },
+        new MenuItem { Text = Model.Venue.Name }
+    }
+})
 
 @await Html.PartialAsync("Admin/Venues/_VenueAdminTabs", new VenueAdminTabsViewModel
 {
