--- a/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_GroupAdminLayout.cshtml
@@ -37,15 +37,10 @@
             Text = "Events",
             Children = new[]
             {
-                new MenuItem { Link = OdkRoutes2.MemberGroups.EventCreate(platform, chapter), Text = "Create" },
                 new MenuItem 
                 { 
                     Link = OdkRoutes2.MemberGroups.Venues(platform, chapter),
-                    Text = "Venues",
-                    Children = new[]
-                    {
-                        new MenuItem { Link = OdkRoutes2.MemberGroups.VenueCreate(platform, chapter), Text = "Create" }
-                    }
+                    Text = "Venues"
                 },
                 new MenuItem { Link = OdkRoutes2.MemberGroups.EventSettings(platform, chapter), Text = "Settings" }
             }
@@ -61,11 +56,7 @@
                 new MenuItem 
                 { 
                     Link = OdkRoutes2.MemberGroups.MembersSubscriptions(platform, chapter), 
-                    Text = "Subscriptions",
-                    Children = new[]
-                    {
-                        new MenuItem { Link = OdkRoutes2.MemberGroups.MembersSubscriptionCreate(platform, chapter), Text = "Create" }
-                    }
+                    Text = "Subscriptions"
                 },
                 new MenuItem { Link = OdkRoutes2.MemberGroups.MembersEmail(platform, chapter), Text = "Bulk email" }
             }
