--- a/ODK.Web.Razor/Pages/SuperAdmin/Groups.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Groups.cshtml
@@ -5,14 +5,11 @@
 @model ODK.Web.Razor.Pages.SuperAdmin.GroupsModel
 @inject IChapterAdminService ChapterAdminService
 @{
-    Layout = "SuperAdmin/_SuperAdminLayout";
+    Layout = "_SiteAdminLayout";
     Model.Title = "Groups | SuperAdmin";
 
     var memberId = User.MemberId();
     var viewModel = await ChapterAdminService.GetSuperAdminChaptersViewModel(memberId);
 }
 
-@await Html.PartialAsync("Components/_Body", new BodyViewModel
-{
-    Content = await Html.PartialAsync("SuperAdmin/_ChaptersContent", viewModel)
-})
+@await Html.PartialAsync("SuperAdmin/_ChaptersContent", viewModel)
