--- a/ODK.Web.Razor/Pages/SuperAdmin/EmailProvider.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/EmailProvider.cshtml
@@ -3,16 +3,17 @@
 @using ODK.Web.Common.Components
 @model EmailProviderModel
 @{
-    Layout = "SuperAdmin/_SuperAdminLayout";
+    Layout = "_SiteAdminLayout";
     Model.Title = "Edit email provider | SuperAdmin";
 }
 
-@await Html.PartialAsync("Components/_Body", new BodyViewModel
+@await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
 {
     Breadcrumbs = new []
     {
         new MenuItem { Link = "/SuperAdmin/Emails", Text = "Emails" },
         new MenuItem { Text = Model.Provider?.SmtpServer ?? "SMTP" }
-    },
-    Content = await Html.PartialAsync("SuperAdmin/_EmailProviderContent", Model.Provider)
+    }
 })
+
+@await Html.PartialAsync("SuperAdmin/_EmailProviderContent", Model.Provider)
