--- a/ODK.Web.Razor/Pages/SuperAdmin/EmailProviderCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/EmailProviderCreate.cshtml
@@ -3,16 +3,17 @@
 @using ODK.Web.Common.Components
 @model EmailProviderCreateModel
 @{
-    Layout = "SuperAdmin/_SuperAdminLayout";
+    Layout = "_SiteAdminLayout";
     Model.Title = "Create email provider | SuperAdmin";
 }
 
-@await Html.PartialAsync("Components/_Body", new BodyViewModel
+@await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
 {
     Breadcrumbs = new []
     {
         new MenuItem { Link = "/SuperAdmin/EmailProviders", Text = "Email providers" },
-        new MenuItem { Text = "Create" }
-    },
-    Content = await Html.PartialAsync("SuperAdmin/_EmailProviderCreateContent")
+        new MenuItem { Text = "New" }
+    }
 })
+
+@await Html.PartialAsync("SuperAdmin/_EmailProviderCreateContent")
