--- a/ODK.Web.Razor/Pages/SuperAdmin/SubscriptionCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/SubscriptionCreate.cshtml
@@ -3,16 +3,17 @@
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.SuperAdmin.SubscriptionCreateModel
 @{
-    Layout = "SuperAdmin/_SuperAdminLayout";
+    Layout = "_SiteAdminLayout";
     Model.Title = "Create subscription | SuperAdmin";
 }
 
-@await Html.PartialAsync("Components/_Body", new BodyViewModel
+@await Html.PartialAsync("Components/_Breadcrumbs", new BreadcrumbsViewModel
 {
     Breadcrumbs = new[]
     {
         new MenuItem { Link = "/SuperAdmin/Subscriptions", Text = "Subscriptions" },
-        new MenuItem { Text = "Create" }
-    },
-    Content = await Html.PartialAsync("SuperAdmin/_SubscriptionCreateContent")
+        new MenuItem { Text = "New" }
+    }
 })
+
+@await Html.PartialAsync("SuperAdmin/_SubscriptionCreateContent")
